--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "test"
   ],
   "author": "Lucas",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-jasmine-node": "^0.2.0",
+    "jasmine-runner-node": "0.0.1"
+  }
 }
